# RDS_CDC

./: CLAUDE.md  README.md  pyproject.toml  specs.md
config/: config.example.yaml
src/cdc_sync/: __init__.py  __main__.py  app.py
src/cdc_sync/cdc/: engine.py  poller.py  retry.py
src/cdc_sync/config/: loader.py  models.py
src/cdc_sync/cutover/: controller.py
src/cdc_sync/db/: connection.py  merge.py
src/cdc_sync/logging/: setup.py
src/cdc_sync/preconditions/: cdc_check.py  pk_check.py
src/cdc_sync/snapshot/: engine.py
src/cdc_sync/state/: models.py  queries.py  store.py
src/cdc_sync/validation/: validator.py
tests/: conftest.py
