[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cdc-sync"
version = "0.1.0"
description = "CDC replication from Azure SQL Database to Amazon RDS for SQL Server"
requires-python = ">=3.12"
dependencies = [
    "pyodbc>=5.1",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "structlog>=24.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
cdc-sync = "cdc_sync.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cdc_sync"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
